--- a/index.html
+++ b/index.html
@@ -36,13 +36,18 @@
 </head>
 <!-- body -->
 
-<body class="main-layout">
+<body class="main-layout" >
   <!-- header section start -->
   <div class="header_section">
     <div class="container">
       <div class="row">
         <div class="col-sm-3">
-          <div class="logo"><a href="#"><img src="images/logo.png"></a></div>
+          <div class="logo">
+            <h1 class="logo-text">
+              <img src="images/ayoba logo.png" height="50" width="50" >
+              STORE
+            </h1>
+          </div>
         </div>
         <div class="col-sm-9">
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -348,6 +353,7 @@
       })
     });
   </script>
+   <script src="microapp.js"></script>
 </body>
 
 </html>
