--- a/via-momo.html
+++ b/via-momo.html
@@ -68,10 +68,7 @@
     </div>
   </div>
   <!-- section footer end -->
-  <div class="copyright">
-    2019 All Rights Reserved.
-    <a href="https://html.design">Free html Templates</a>
-  </div>
+  <div class="copyright">2021 All Rights Reserved. AYOBA</div>
 
   <!-- Javascript files-->
   <script src="js/jquery.min.js"></script>
