--- a/admin.html
+++ b/admin.html
@@ -34,8 +34,12 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-3">
-          <div class="logo"><a href="#"><img src="images/logo.png"></a></div>
-        </div>
+          <div class="logo">
+            <h1 class="logo-text">
+              <img src="images/ayoba logo.png" height="50" width="50" >
+              STORE
+            </h1>
+          </div>        </div>
       </div>
     </div>
   </div>>
