--- a/item-info.html
+++ b/item-info.html
@@ -43,7 +43,10 @@
       <div class="row">
         <div class="col-sm-3">
           <div class="logo">
-            <a href="#"><img src="images/logo.png" /></a>
+            <h1 class="logo-text">
+              <img src="images/ayoba logo.png" height="50" width="50" >
+              STORE
+            </h1>
           </div>
         </div>
         <div class="col-sm-9">
